# MAI_labs_TeorMech

./: pyproject.toml
lab1/: LR1.docx  main.py
lab1/lab1/: main.py
lab2/: LR2.docx  main.py
lab3/: LR3.docx  main.py
